# voice-type

./: .env-example  .gitignore  AGENTS.md  CODEX_HANDOFF.md  Codex-Handoff.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-15-voice-type-mvp.md  2026-05-15-voice-type-next-iterations.md  2026-05-15-voice-type-tray-app.md  2026-05-19-voice-type-correction-memory.md  2026-05-21-voice-type-env-example.md  2026-05-21-voice-type-output-mute-during-recording.md  2026-05-23-voice-type-settings-ui.md
docs/superpowers/specs/: 2026-05-15-voice-type-design.md  2026-05-15-voice-type-tray-app-design.md  2026-05-19-voice-type-correction-memory-design.md  2026-05-19-voice-type-settings-ui-design.md  2026-05-21-voice-type-env-example-design.md  2026-05-21-voice-type-output-mute-during-recording-design.md
src/voicetype/: __init__.py  __main__.py  active_window.py  audio.py  cli.py  hotkey.py  injector.py  listener_runtime.py  memory.py  notifier.py  output_audio.py  pipeline.py  qwen_client.py  session_log.py  settings.py  settings_ui.py  startup.py  tray.py  user_settings.py  whisper_client.py
tests/: test_active_window.py  test_audio_injector.py  test_cli_entrypoint.py  test_hotkey.py  test_listener_runtime.py  test_memory.py  test_notifier.py  test_output_audio.py  test_pipeline.py  test_qwen_client.py  test_session_log.py  test_settings.py  test_settings_ui.py  test_startup.py  test_tray.py  test_user_settings.py  test_whisper_client.py
